ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-back-ingress
spec:
  rules:
    - host: front.server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80    
    - host: api.server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name : back
                port:
                  number: 6500
